k8s/tb-gw-ushift.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: tb-gateway
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tb-gateway
  namespace: tb-gateway
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: tb-gw
  template:
    metadata:
      labels:
        app: tb-gw
    spec:
      volumes:        
        - name: tb-gateway-cert
          configMap:
            name: tb-gateway-cert
            items:
              - key: server.pem
                path: server.pem
#        - name: storage
#          persistentVolumeClaim:
#            claimName: tb-gateway-pvc
        - name: tblogs
          emptyDir: {}
      containers:
        - name: tb-gw
          image: quay.io/sbergste/tb-gateway:latest
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 5000
              name: "rest"
          volumeMounts:
#            - mountPath: "/thingsboard_gateway/config"
#              name: storage
            - mountPath: /app/thingsboard-gateway/logs
              name: tblogs
            - name: tb-gateway-cert
              mountPath: /app/thingsboard-gateway/certs

---
kind: Service
apiVersion: v1
metadata:
  name: tb-rest
  namespace: tb-gateway
spec:
  selector:
    app: tb-gw
  ports:
    - protocol: TCP
      name: rest
      port: 5000
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tb-rest
  namespace: tb-gateway
spec:
  port:
    targetPort: 5000
  to:
    kind: Service
    name: tb-rest
    weight: 100
  wildcardPolicy: None
